Bug 402989 - Shift+Enter in find bar should find previous occurrence
Summary: Shift+Enter in find bar should find previous occurrence
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-01-08 07:30 UTC by nyanpasu64
Modified: 2019-01-24 14:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nyanpasu64 2019-01-08 07:30:46 UTC
SUMMARY
Shift+Enter in find bar should find previous occurrence. Right now, it finds next occurrence.

STEPS TO REPRODUCE
1. Ctrl+F
2. Type a string that appears 3 or more times in document
3. Press Enter then Shift+Enter

OBSERVED RESULT
Find jumps to occurrence 2 then 3.

EXPECTED RESULT
Find jumps to occurrence 2 then 1.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 18.04
KDE Plasma Version: 5.12.7
KDE Frameworks Version: 5.44.0
Qt Version: 5.9.5

ADDITIONAL INFORMATION
Reproduced in Falkon 3.0.99 flatpak.
Comment 1 David Rosca 2019-01-24 14:54:47 UTC
Git commit a237c8ff874a2adeed8588709f14fdb3b766fa2f by David Rosca.
Committed on 24/01/2019 at 14:53.
Pushed by drosca into branch 'master'.

SearchToolBar: Add Shift+Enter shortcut to find previous
FIXED-IN: 3.1.0

M  +17   -3    src/lib/webtab/searchtoolbar.cpp

https://commits.kde.org/falkon/a237c8ff874a2adeed8588709f14fdb3b766fa2f