SearchToolBar: Add Shift+Enter shortcut to find previous

BUG: 402989
FIXED-IN: 3.1.0